<resources>
    //Nome que vai aparecer para o usuário
    <string name="app_name">;</string>

    //Login
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="entra">ENTRAR</string>
    <string name="eSenha">Esqueceu sua senha?</string>
    <string name="Cadastro">Cadastrar-se!</string>

    //Cadastro
    <string name="nUsuario">Nome de Usuário</string>
    <string name="btnCadastrar">Cadastrar</string>


    <string name="Voltar">VOLTAR</string>
    <string name="Confirmar">Confirmar</string>
    <string name="nSenha">NOVA SENHA</string>

    //Entrou
    <string name="bVindo">Bem Vindo(a)!</string>
    <string name="bt1">CHAT</string>
    <string name="bt2">NOTAS</string>
    <string name="bt3">INFORMAÇÕES</string>
    <string name="bt4">CONTROLE</string>

    <string name="logout">Sair</string>

    //Humores
    //Melancólico
    <string name="rgM1">Triste</string>
    <string name="rgM2">Medroso</string>
    <string name="rgM3">Deprimido</string>
    <string name="rgM4">Poético</string>
    <string name="rgM5">Artístico</string>
    //Fleumático
    <string name="rgF1">Lento</string>
    <string name="rgF2">Quieto</string>
    <string name="rgF3">Tímido</string>
    <string name="rgF4">Racional</string>
    <string name="rgF5">Coerente</string>
    //Colérico
    <string name="rgC1">Impetuoso</string>
    <string name="rgC2">Energético</string>
    <string name="rgC3">Apaixonado</string>
    //Sanguíneo
    <string name="rgS1">Afetuoso</string>
    <string name="rgS2">Alegre</string>
    <string name="rgS3">Otimista</string>
    <string name="rgS4">Confiante</string>

    <string name="informe">Que tal nos mandar um link sobre o assunto?</string>
    <string name="link">link:</string>
    <string name="aceite">Aceite os links que desejar</string>
    <string name="enviar">ENVIAR</string>

    <string name="title_activity_tela_notas">telaNotas</string>
    <string name="nNotas">Nova nota:</string>
    <string name="criar">Criar</string>

</resources>
