<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TelaControle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:foregroundGravity="center"
            android:textAlignment="center"
            app:srcCompat="@drawable/lg_img" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:foregroundGravity="center"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:orientation="vertical"
                android:textAlignment="center">



                    //Humores Melancólicos

                    <RadioButton
                        android:id="@+id/rbM1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgM1"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbM2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgM2"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbM3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgM3"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbM4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgM4"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbM5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgM5"
                        android:textColor="#000000" />

                    //Humores Fleumático

                    <RadioButton
                        android:id="@+id/rbF1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgF1"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbF2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgF2"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbF3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgF3"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbF4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgF4"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbF5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgF5"
                        android:textColor="#000000" />

                    //Humores Colérico

                    <RadioButton
                        android:id="@+id/rbC1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgC1"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbC2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgC2"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbC3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgC3"
                        android:textColor="#000000" />

                    //Humores Sanguíneo

                    <RadioButton
                        android:id="@+id/rbS1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgS1"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbS2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgS2"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbS3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgS3"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbS4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rgS4"
                        android:textColor="#000000" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>