<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TelaEnviarLinks">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:gravity="center"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/lg_img" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="200dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/tt_informativo" />

        <TextView
            android:id="@+id/tvInfor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/informe"
            android:textColor="#000000"
            android:textSize="30dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edt_link"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/link"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:textColor="#000000"
                android:layout_marginRight="30dp"
                android:text="@string/Voltar" />

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2E3C59"
                android:hint="@string/enviar" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>